--- a/package.json
+++ b/package.json
@@ -25,15 +25,14 @@
     "@acid-info/lsd-react": "^0.1.0-beta.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@hookstate/core": "^4.0.1",
-    "@hookstate/localstored": "^4.0.2",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.5.5",
     "@types/mdx": "^2.0.8",
     "@vercel/og": "^0.5.4",
     "axios": "^1.4.0",
-    "next": "^14.2.3",
+    "jotai": "^2.10.2",
+    "next": "^15.0.0",
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
